tests/a/tests/integrity/fail/if/if.4.stderr
error: expected {bin}{bin}, found {bin}{b,bin,c}
  --> tests/integrity/fail/if/if.4.rs:12:17
   |
12 |             x = 6;
   |                 ^
